Fix top menu not showing up if you have a top menu defined with items in it, and remove search icon right padding

--- a/wp-content/themes/starter-theme/src/scss/5_components/_search.scss
+++ b/wp-content/themes/starter-theme/src/scss/5_components/_search.scss
@@ -3,7 +3,7 @@
   }
 
   padding-left: 50px;
-  padding-right: 30px;
+  padding-right: 0px;
   height: 40px;
   margin-top: 6px;
   position: relative;
